Male izmene kod baze

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/web
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=12345678
 
 spring.jpa.show-sql = true
 
